--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS function basics</title>
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <script src="tasks.js"></script>
 </head>
 <body>
     
