Complete anonymous functions. Try usage of addEventListner().

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS function basics</title>
-    <!-- <script src="functions.js"></script> -->
+
     <script src="tasks.js"></script>
 </head>
-<body>
-    
+
+<body style="display: flex;">
+
+    <input id="textBox" type="text" />
+    <div id="output" style="width: 150px; background-color: bisque;"></div>
+
+    <script src="functions.js"></script>
+
 </body>
+
 </html>
